fixed some tests

--- a/test/index.html
+++ b/test/index.html
@@ -10,5 +10,7 @@
     <div id="root"></div>
     <script src="index.js"></script>
     <link rel="stylesheet" href="style.css" />
+    <link href="a.css" rel="stylesheet" />
+    <script src="lib/lib.min.js" defer></script>
   </body>
 </html>
